Replace deprecated methods and begin with the proxy management (motd, tablist)